# praktics

./: .gitignore  README.md
pr1/: CMakeLists.txt  TextEditor_en.ts  TextEditor_ru.ts  main.cpp  main.qml  main.qss  main_qml.cpp
pr2/: CMakeLists.txt  PaintEditor_en.ts  PaintEditor_ru.ts  main.cpp
